# pyphony

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  TODO.md  WORKFLOW.md  pyphony  pyphony-sv  pyproject.toml  spec.md
.claude/commands/: create-task.md  debug-ticket.md  get-task.md  grooming.md  update-task.md  write-spec.md
.claude/research/: hosting.md
.github/workflows/: tests.yml
docs/: user-guide.md
docs/research/: SER-86-merge-via-attachment.md
specs/: agent-protocol.md  interactive.md  observability.md  operations.md  orchestration.md  overview.md  reference.md  supervisor.md  tracker.md  workflow.md  workspace.md
src/pyphony/: agent.py  automerge.py  candidates.py  cli.py  config.py  create_issue.py  errors.py  issue_commands.py  linear_tool.py  logging.py  models.py  normalization.py  orchestrator.py  prompt.py  prompt_view.py  protocol.py  server.py  service.py  supervisor.py  tracker.py  tracker_queries.py  url_handler.py  watcher.py  work.py  workflow.py  workspace.py
tasks/: feedback-in-tasks.md  stream-closed-bug.md
tests/: test_agent.py  test_automerge.py  test_bug_report.py  test_cli.py  test_config.py  test_linear_tool.py  test_models.py  test_normalization.py  test_orchestrator.py  test_prompt.py  test_prompt_view.py  test_server.py  test_service.py  test_thread_replies.py  test_tracker.py  test_url_handler.py  test_watcher.py  test_work.py  test_workflow.py  test_workspace.py
tests/fixtures/: no_frontmatter.md  non_map_frontmatter.md  (+1 more)
workflows/: candidates.md  claude-explorer.md  context.md  pyphony.md  taiga-examples.md
(+11 files in other folders)
